@@ -1,5 +1,6 @@
 FOF 3.4.1
 ================================================================================
++ loadAnyTemplate can optionally skip template overrides (useful for Blade template overrides which need to include the original file)
 # [HIGH] TransparentAuthentication fails on PHP 7.3.0 (backport from FOF 4 branch)
 
 FOF 3.4.0
